--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -10,8 +10,9 @@
     --input-box-shadow: rgba(194, 195, 214, 0.50);
     --input-color: #494c6b;
     --button-color: #393A4B;
-    --bg-main: #fafafa
-    --bg-tarefas: #fff
+    --bg-main: #fafafa;
+    --bg-tarefas: #fff;
+    --box-shadow: 0px 35px 50px -15px rgba(194, 195, 214, 0.50);
 }
 
 header {
@@ -69,4 +70,28 @@ main {
 
 .tarefas {
     background: var(--bg-tarefas);
+    box-shadow: var(--box-shadow);
+    border-radius: 0.3125rem;
+    margin-top: -1.5rem;
+}
+
+.tarefas .tarefa {
+    padding: 1rem 1.25rem;
+}
+
+.tarefa form {
+    display: flex;
+    justify-content: space-between;
+}
+
+.tarefa div {
+    display: flex;
+    align-items: center;
+    gap: 0.75rem;
+}
+
+.tarefa button {
+    border: none;
+    background: none;
+
 }
