--- a/views/home-mateus.handlebars
+++ b/views/home-mateus.handlebars
@@ -36,10 +36,16 @@
                 </button>
             </form>
         </div>
-
         <div>
             <div class="informacoes">
                 <p>5 tarefas ativas</p>
+
+                <div class="botoes">
+                    <a href="">Todas</a>
+                    <a href="">Ativas</a>
+                    <a href="">Completas</a>
+                </div>
+
                 <a href="">Limpas tarefas</a>
             </div>
         </div>
