--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -41,6 +41,7 @@
             <div class="informacoes">
                 <p>5 tarefas ativas</p>
                 <a href="">Limpas tarefas</a>
+                <p>ola mundo</p>
             </div>
         </div>
     </section>
