--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -135,3 +135,44 @@ main {
 
     font-size: 0.85rem;
 }
+
+.botoes {
+    padding-block: 1rem;
+    background: var(--bg-tarefas);
+    border-radius: 0.3125rem;
+    margin-top: 1rem;
+    max-width: 33,75rem;
+    margin-inline: auto;
+
+    display: flex;
+    justify-content: center;
+    gap: 1.2rem;
+
+    font-size: 0.85rem;
+}
+
+@media(min-width: 1000px) {
+    section.botoes {
+        display: none;
+    }
+
+    .informacoes .botoes {
+        display: flex;
+        padding: 0;
+        margin: 0;
+    }
+
+    .tarefa button {
+        visibility: hidden;
+    }
+
+    .tarefa input:hover,
+    .tarefa label:hover,
+    .tarefa button:hover {
+        cursor: pointer;
+    }
+
+    .tarefa:hover button {
+        visibility: initial;
+    }
+}
