--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -36,12 +36,17 @@
                 </button>
             </form>
         </div>
-
         <div>
             <div class="informacoes">
                 <p>5 tarefas ativas</p>
+
+                <div class="botoes">
+                    <a href="">Todas</a>
+                    <a href="">Ativas</a>
+                    <a href="">Completas</a>
+                </div>
+
                 <a href="">Limpas tarefas</a>
-                <p>ola mundo</p>
             </div>
         </div>
     </section>
